--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,12 +26,13 @@ body {
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .sidebar {
+    z-index: 99999 !important;
+    height: 100%;
   }
 
   ::-webkit-scrollbar {
-    width: 3px;
+    width: 4px;
   }
 
   /* Track */
