--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -18,11 +18,12 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  background-color: black;
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
-  ) rgb(var(--background-start-rgb));
+  ) rgb(var(--background-start-rgb)); */
 }
 
 @layer utilities {
