--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -57,3 +57,35 @@ body {
     height: inherit;
   }
 }
+
+.home-slider{
+ height: 250px;
+}
+
+.homepage-games{
+  width: 300px;
+  height: 190px;
+}
+
+@media (min-width: 425px) and (max-width: 655px){
+  .homepage-games{
+    width: 180px;
+    height: 120px;
+  }
+}
+
+@media (min-width: 300px) and (max-width: 425px){
+  .homepage-games{
+    width: 130px;
+    height: 80px;
+  }
+
+  .home-slider{
+    height: 200px;
+  }
+}
+
+.game-thumbnail{
+  height: 600Px !important;
+  width: 100% !important;
+}
