--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jersey+15&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -116,4 +118,3 @@ body {
     width: 100% !important;
   }
 }
-
