--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -68,6 +68,37 @@ body {
   height: 190px;
 }
 
+.reset-all * {
+  /*margin: revert !important;*/
+  padding: revert !important;
+  /*font-size: revert !important;*/
+  /*font-weight: revert !important;*/
+  list-style-type: revert !important;
+  box-sizing: border-box;
+}
+
+.reset-all ol li[data-list="bullet"] {
+  list-style-type: disc !important;
+  display: list-item !important;
+}
+
+.reset-all blockquote {
+  border-left: 4px solid #ccc !important;
+  margin-bottom: 5px !important;
+  margin-top: 5px !important;
+  padding-left: 12px !important;
+}
+
+.reset-all table {
+  table-layout: fixed !important;
+  width: 100% !important;
+}
+.reset-all td {
+  border: 1px solid #000 !important;
+  padding: 2px 5px !important;
+}
+
+
 @media (min-width: 425px) and (max-width: 655px) {
   .homepage-games {
     height: 120px;
